--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,14 @@
 ---
-name: Tails Azimuth
+name: Nisa Ramadani
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
+occupation: Performance Artist
+company: Independent Artist
 email: address@yoursite.com
 twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com
 github: https://github.com
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Nisa Ramadani is an artist from Yogyakarta. She graduated from Faculty of Psychology, Universitas Gadjah Mada. Her works mostly focused on performance art and performing art (actor and dancer).
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+She participated in OpenLab program by Teater Garasi/Garasi Performance Institute and it becomes her starting point to develop career as an artist. She is also part of Proyek Edisi, a young artists' initiative based in Yogyakarta.
