--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -2,9 +2,10 @@
 name: Nisa Ramadani
 avatar: /static/images/avatar.png
 occupation: Performance Artist
-company: Independent Artist
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
+company:
+email: nisaramadani.icha@gmail.com
+instagram: https://instagram.com/nsrmdn
+twitter: https://x.com/
 linkedin: https://www.linkedin.com
 github: https://github.com
 ---
