--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -3,7 +3,7 @@ name: Nisa Ramadani
 avatar: /static/images/avatar.png
 occupation: Performance Artist
 company:
-email: nisaramadani.icha@gmail.com
+email: mailto:nisaramadani.icha@gmail.com
 instagram: https://instagram.com/nsrmdn
 twitter: https://x.com/
 linkedin: https://www.linkedin.com
