Change projects to works

--- a/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
+++ b/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
@@ -65,7 +65,7 @@ I wanted it to be nearly as feature-rich as popular blogging templates like [bea
 - Support for nested routing of blog posts
 - Newsletter component with support for mailchimp, buttondown and convertkit
 - Supports [giscus](https://github.com/laymonage/giscus), [utterances](https://github.com/utterance/utterances) or disqus
-- Projects page
+- Works page
 - Preconfigured security headers
 - SEO friendly with RSS feed, sitemaps and more!
 
@@ -85,7 +85,7 @@ I wanted it to be nearly as feature-rich as popular blogging templates like [bea
 3. Modify the content security policy in `next.config.js` if you want to use
    any analytics provider or a commenting solution other than giscus.
 4. Personalize `authors/default.md` (main author)
-5. Modify `projectsData.ts`
+5. Modify `worksData.ts`
 6. Modify `headerNavLinks.ts` to customize navigation links
 7. Add blog posts
 8. Deploy on Vercel
@@ -110,7 +110,7 @@ You can start editing the page by modifying `pages/index.js`. The page auto-upda
 
 `data/authors/default.md` - default author information (required). Additional authors can be added as files in `data/authors`.
 
-`data/projectsData.js` - data used to generate styled card on the projects page.
+`data/worksData.js` - data used to generate styled card on the works page.
 
 `data/headerNavLinks.js` - navigation links.
 
