--- a/data/blog/new-features-in-v1.mdx
+++ b/data/blog/new-features-in-v1.mdx
@@ -403,7 +403,7 @@ Google font has been replaced with self-hosted font from [Fontsource](https://fo
 
 > Self-hosting brings significant performance gains as loading fonts from hosted services, such as Google Fonts, lead to an extra (render blocking) network request. To provide perspective, for simple websites it has been seen to double visual load times.
 >
-> Fonts remain version locked. Google often pushes updates to their fonts without notice, which may interfere with your live production projects. Manage your fonts like any other NPM dependency.
+> Fonts remain version locked. Google often pushes updates to their fonts without notice, which may interfere with your live production works. Manage your fonts like any other NPM dependency.
 >
 > Commit to privacy. Google does track the usage of their fonts and for those who are extremely privacy concerned, self-hosting is an alternative.
 
