--- a/data/blog/the-unseen-self.mdx
+++ b/data/blog/the-unseen-self.mdx
@@ -4,7 +4,7 @@ date: '2022-08-15'
 tags: ['performance art', 'photography performance']
 draft: false
 images: ['/static/images/the-unseen-self-1.jpeg']
-summary: A work-in-progress photo performance art, an experiment about self-gaze. The Unseen Self  has been exhibited on "Presentasi Preposisi: Gotong Royong untuk Seni dan Kesetaraan", 15-24 August 2022 at Institut Français Indonesia, Yogyakarta.
+summary: A work-in-progress photo performance art, an experiment about self-gaze. The Unseen Self  has been exhibited on 'Presentasi Preposisi: Gotong Royong untuk Seni dan Kesetaraan', 15-24 August 2022 at Institut Français Indonesia, Yogyakarta.
 ---
 ## Short Description
 
