Add related links to the unseen self

--- a/data/archive/performance-art/the-unseen-self.mdx
+++ b/data/archive/performance-art/the-unseen-self.mdx
@@ -12,5 +12,9 @@ A work-in-progress photo performance art, an experiment about self-gaze. The Uns
 
 Kelas Seni Terbuka 2022 has specifically discusses and learns about gender and sexuality. The curators and mentors are FX Harsono, Wulan Dirgantoro, Lashita Situmorang, and Karina Roosvita. The facilitators are Ruang Arsip dan Sejarah Perempuan (RUAS) and Aliansi Laki-laki Baru (ALLB). 
 
+## Related Links
+- Studio Visit and curatorial text of The Unseen Self on [Asana Bina Seni 2023](https://asanabinaseni.biennalejogja.org/setempat/nisa-ramadani/) exhibition.
+- [_Asana Bina Seni Gelar Pameran Bertajuk (Se)Tempat_](https://ekspresionline.com/asana-bina-seni-gelar-pameran-bertajuk-setempat/) article.
+
 ## Gallery
 ![Doc. 1](/static/images/the-unseen-self/the-unseen-self-1.jpeg)
