Replace 'performing-art' tags

--- a/data/archive/performing-art/belajar-menjadi-laki-laki.mdx
+++ b/data/archive/performing-art/belajar-menjadi-laki-laki.mdx
@@ -1,7 +1,7 @@
 ---
 title: Belajar Menjadi Laki-laki
 date: '2024-04-30'
-tags: ['pantomime', 'performing-art']
+tags: ['performing-art', 'pantomime']
 draft: false
 summary: 'Gelar Pantomim Taman Budaya Yogyakarta" carries the grand theme, "Pantomim dan Api Gagasan." New ideas from the younger generation will enliven pantomime performances, both in its form and content. From this young generation, the Fire of Ideas will continue to flare. It becomes the spirit to create new works and plan future agendas.'
 ---
