--- a/data/archive/performing-art/mautopia.mdx
+++ b/data/archive/performing-art/mautopia.mdx
@@ -1,7 +1,7 @@
 ---
 title: Mautopia
 date: '2019-07-26'
-tags: ['dramatic-reading', 'performing-art']
+tags: ['performing-art', 'dramatic-reading']
 draft: false
 summary: 'Involved as an actor at Indonesia Dramatic Reading Festival (IDRF): Asian Playwrights Meeting – States of Crisis, reading Mautopia as one of the scripts presented in that event. IDRF 2019 involved scriptwriters from Cambodia, Indonesia, Japan, Malaysia, Philippines, Singapore, and Thailand. The Mautopia script is written by Ridhwan Saidi, an independent filmmaker and writer from Malaysia.'
 ---
