--- a/data/archive/performing-art/the-brief-history-of-dance.mdx
+++ b/data/archive/performing-art/the-brief-history-of-dance.mdx
@@ -1,7 +1,7 @@
 ---
 title: The Brief History of Dance
 date: '2022-02-19'
-tags: ['dance', 'performing-art']
+tags: ['performing-art', 'dance']
 draft: false
 summary: 'Presented as a part of OPENLAB X CABARET CHAIRIL event, held on Saturday, 19 February 2022 at Teater Garasi/Garasi Performance Institute. The Brief History of Dance was directed by Andreas Ari Dwianto (Inyong). This work-in-progress involved 6 actors: Erythrina Baskoro, Irfan Hakim, Michael Eduard Gaja Seto, Nisa Ramadani, Putri Lestari, and Wijil Rachmadhani.'
 ---
