Update Youtube Mencari Kabar

--- a/data/archive/performance-art/mencari-kabar.mdx
+++ b/data/archive/performance-art/mencari-kabar.mdx
@@ -19,4 +19,5 @@ For complete documentation, please click [this](https://www.youtube.com/channel/
 ![Doc. 2](/static/images/mencari-kabar/mencari-kabar-2.webp)
 
 ### Watch Minting Performance
-[![Minting Performance](https://markdown-videos-api.jorgenkh.no/url?url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DEfAk1ydDxpM)](https://www.youtube.com/watch?v=EfAk1ydDxpM)
+<YouTube id="EfAk1ydDxpM" title="Watch Mencari Kabar (Screenrecord) on YouTube"/>
+<YouTube id="wS8fut8oW_w" title="Watch Mencari Kabar on YouTube"/>
